--- a/express-server/views/404.ejs
+++ b/express-server/views/404.ejs
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Express with template</title>
+    <title><%= Not Found %></title>
   </head>
   <body>
-    <h1>Random Number</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem et, eaque
-      accusantium quasi iure porro deleniti modi consectetur qui explicabo!
-    </p>
+    <h1>I'm sorry, we couldn't find the <%= subreddit %> subreddit!!</h1>
   </body>
 </html>
