style #10: add bootstrap style

--- a/express-server/views/home.ejs
+++ b/express-server/views/home.ejs
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Express with template</title>
-  </head>
-  <body>
-    <h1>Random Number</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem et, eaque
-      accusantium quasi iure porro deleniti modi consectetur qui explicabo!
-    </p>
-  </body>
-</html>
+<%- include('partials/head') %> <%- include('partials/navbar') %>
+
+<div class="container">
+  <h1 class="display-1">Hello World!</h1>
+</div>
+
+<%- include('partials/footer') %>
