--- a/express-server/views/notfound.ejs
+++ b/express-server/views/notfound.ejs
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Not Found</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  </head>
-  <body>
-    <h1 class="display-1">
-      I'm sorry, we couldn't find the <%= subreddit %> subreddit!!
-    </h1>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-  </body>
-</html>
+<%- include('partials/head') %> <%- include('partials/navbar') %>
+<div class="container">
+  <h1 class="display-1">
+    I'm sorry, we couldn't find the <%= subreddit %> subreddit!!
+  </h1>
+</div>
+
+<%- include('partials/footer') %>
