--- a/express-server/views/subreddit.ejs
+++ b/express-server/views/subreddit.ejs
@@ -1,96 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= name %></title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Disabled</a
-              >
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
+<%- include('partials/head') %> <%- include('partials/navbar') %>
+
+<div class="container">
+  <h1 class="h1">/ <%= name %></h1>
+  <h2 class="lead"><%= description %></h2>
+  <h5 class="h5">
+    Total Subscribers: <span class="badge bg-primary"><%= subscribers %></span>
+  </h5>
+
+  <hr />
+
+  <% for(let post of posts) { %>
+  <article class="row">
+    <div class="col-sm-6">
+      <div class="card" style="width: 18rem">
+        <% if(post.img){ %>
+        <img src="<%= post.img %> " class="card-img-top" alt="..." />
+        <% } %>
+        <div class="card-body">
+          <h5 class="card-title"><%= post.title %></h5>
+          <p class="card-text">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-person-circle"
+              viewBox="0 0 16 16"
+            >
+              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+              <path
+                fill-rule="evenodd"
+                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+              />
+            </svg>
+            <%= post.author %>
+          </p>
         </div>
       </div>
-    </nav>
+    </div>
+  </article>
 
-    <h1>Browsing the <%= name %> Subreddit</h1>
-    <h2><%= description %></h2>
-    <p>Total Subscribers <%= subscribers %></p>
+  <% } %>
+</div>
 
-    <hr />
-
-    <% for(let post of posts) { %>
-    <article>
-      <p><%= post.title %> - <b><%= post.author %> </b></p>
-      <% if(post.img){ %>
-      <img src="<%= post.img %> " alt="" srcset="" />
-      <% } %>
-    </article>
-
-    <% } %>
-
-    <script src="/js/bootstrap.bundle.min.js"></script>
-  </body>
-</html>
+<%- include('partials/footer') %>
