feat #10: add link pages for comments

--- a/REST API/views/comments/index.ejs
+++ b/REST API/views/comments/index.ejs
@@ -24,5 +24,8 @@
         </ul>
       </div>
     </section>
+    <section class="section">
+      <a href="/comments/new" class="button is-link">Add New Comment</a>
+    </section>
   </body>
 </html>
