--- a/REST API/views/comments/new.ejs
+++ b/REST API/views/comments/new.ejs
@@ -14,7 +14,7 @@
       <div class="container">
         <h1 class="title">New Comment Form</h1>
 
-        <form action="">
+        <form action="/comments" method="POST">
           <section class="field is-horizontal">
             <div class="field-label is-normal">
               <label for="username" class="label">Enter Username</label>
@@ -61,6 +61,9 @@
             </div>
           </section>
         </form>
+
+        <!-- Back to Index Button -->
+        <a href="/comments" class="button is-link">Back to Index</a>
       </div>
     </section>
   </body>
