--- a/REST API/views/comments/index.ejs
+++ b/REST API/views/comments/index.ejs
@@ -9,6 +9,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <section class="section">
@@ -19,6 +26,12 @@
           <li>
             <%= c.comment %> -
             <b class="has-text-weight-semibold"> <%= c.username %> </b>
+            <a href="/comments/<%= c.id %> " class="button">
+              <span class="icon">
+                <i class="fas fa-info-circle"></i>
+              </span>
+              <span>View</span>
+            </a>
           </li>
           <% } %>
         </ul>
