style #10: change the color of button

--- a/REST API/views/comments/index.ejs
+++ b/REST API/views/comments/index.ejs
@@ -26,7 +26,7 @@
           <li>
             <%= c.comment %> -
             <b class="has-text-weight-semibold"> <%= c.username %> </b>
-            <a href="/comments/<%= c.id %> " class="button">
+            <a href="/comments/<%= c.id %> " class="button is-warning">
               <span class="icon">
                 <i class="fas fa-info-circle"></i>
               </span>
