--- a/MongoDB/views/products/show.ejs
+++ b/MongoDB/views/products/show.ejs
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= product.name %></title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
   </head>
   <body>
-    <h1><%= product.name %></h1>
-
-    <ul>
-      <li>Price: $<%= product.price %></li>
-      <li>Category: <%= product.category %></li>
-    </ul>
+    <main class="container has-background-white">
+      <section class="section has-background-light">
+        <h1 class="title"><%= product.name %></h1>
+        <p class="subtitle">Price: <strong>$<%= product.price %> </strong></p>
+        <p class="subtitle">
+          Category: <strong><%= product.category %> </strong>
+        </p>
+      </section>
+      <a href="/products" class="button is-primary">Back to All Products</a>
+    </main>
   </body>
 </html>
