--- a/MongoDB/views/products/index.ejs
+++ b/MongoDB/views/products/index.ejs
@@ -31,6 +31,11 @@
                     class="card-footer-item"
                     >View</a
                   >
+                  <a
+                    href="/products/<%= product._id %>/edit"
+                    class="card-footer-item"
+                    >Edit</a
+                  >
                 </footer>
               </div>
             </a>
