--- a/MongoDB/views/products/new.ejs
+++ b/MongoDB/views/products/new.ejs
@@ -46,17 +46,20 @@
             <div class="control">
               <div class="select">
                 <select name="category" id="category">
-                  <option value="fruit">Fruit</option>
-                  <option value="vegetable">Vagetable</option>
-                  <option value="dairy">Dairy</option>
+                  <% for(let category of categories) {%>
+                  <option value="<%= category %> "><%= category %></option>
+                  <% } %>
                 </select>
               </div>
             </div>
           </div>
 
-          <div class="field">
+          <div class="field is-grouped">
             <div class="control">
               <button class="button is-link">Submit</button>
+            </div>
+            <div class="control">
+              <a href="/products" class="button is-danger is-light">Cancle</a>
             </div>
           </div>
         </form>
