--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -11,7 +11,11 @@
 
     <ul>
       <% for(let campground of campgrounds) { %>
-      <li><%= campground.title %></li>
+      <li>
+        <a href="/campgrounds/<%= campground._id %>">
+          <%= campground.title %>
+        </a>
+      </li>
       <% } %>
     </ul>
   </body>
