update #12: add back button to the campground page

--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -10,5 +10,9 @@
     <h1>Show Details</h1>
     <h2><%= campground.title %></h2>
     <h3><%= campground.location %></h3>
+
+    <div>
+      <a href="/campgrounds">Back to All campground</a>
+    </div>
   </body>
 </html>
