--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -9,6 +9,9 @@
   <body>
     <h1>All Campground</h1>
 
+    <div>
+      <a href="/campgrounds/new">Add new Campground</a>
+    </div>
     <ul>
       <% for(let campground of campgrounds) { %>
       <li>
