--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -12,6 +12,15 @@
     <h3><%= campground.location %></h3>
 
     <div>
+      <a href="/campgrounds/<%= campground._id %>/edit ">Edit the details</a>
+    </div>
+    <form
+      action="/campgrounds/<%= campground.id %>?_method=DELETE "
+      method="post"
+    >
+      <button>Delete the campground</button>
+    </form>
+    <div>
       <a href="/campgrounds">Back to All campground</a>
     </div>
   </body>
