style #12: add ejs-mate boilerplate template to all pages

--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Campground Show</title>
-  </head>
-  <body>
-    <h1>Show Details</h1>
-    <h2><%= campground.title %></h2>
-    <h3><%= campground.location %></h3>
+<% layout('layouts/boilerplate.ejs') %>
+<h1>Show Details</h1>
+<h2><%= campground.title %></h2>
+<h3><%= campground.location %></h3>
 
-    <div>
-      <a href="/campgrounds/<%= campground._id %>/edit ">Edit the details</a>
-    </div>
-    <form
-      action="/campgrounds/<%= campground.id %>?_method=DELETE "
-      method="post"
-    >
-      <button>Delete the campground</button>
-    </form>
-    <div>
-      <a href="/campgrounds">Back to All campground</a>
-    </div>
-  </body>
-</html>
+<div>
+  <a href="/campgrounds/<%= campground._id %>/edit ">Edit the details</a>
+</div>
+<form action="/campgrounds/<%= campground.id %>?_method=DELETE " method="post">
+  <button>Delete the campground</button>
+</form>
+<div>
+  <a href="/campgrounds">Back to All campground</a>
+</div>
