--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,13 +1,35 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1>All Campground</h1>
+<h1 class="h1">All Campground</h1>
 
 <div>
-  <a href="/campgrounds/new">Add new Campground</a>
+  <a href="/campgrounds/new" class="btn btn-primary">Add new Campground</a>
 </div>
-<ul>
-  <% for(let campground of campgrounds) { %>
-  <li>
-    <a href="/campgrounds/<%= campground._id %>"> <%= campground.title %> </a>
-  </li>
-  <% } %>
-</ul>
+
+<% for(let campground of campgrounds) { %>
+
+<!-- card -->
+<div class="card mb-3 shadow p-3 bd-body rounded">
+  <div class="row">
+    <div class="col-md-4">
+      <img
+        src="<%= campground.image %> "
+        class="rounded img-fluid"
+        alt="campground_image"
+      />
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><%= campground.title %></h5>
+        <p class="card-text"><%= campground.description %></p>
+        <p class="card-text">
+          <small class="text-muted"><%= campground.location %> </small>
+        </p>
+        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
+          >Read More</a
+        >
+      </div>
+    </div>
+  </div>
+</div>
+
+<% } %>
