--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -1,16 +1,68 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1>Add new campground</h1>
-<form action="/campgrounds" method="post">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" name="campground[title]" id="title" />
+
+<div></div>
+
+<div class="row">
+  <h1 class="h1 text-center">New Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds" method="post">
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[title]"
+          id="title"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[location]"
+          id="location"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image URL</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[image]"
+          id="image"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="price">Price</label>
+        <div class="input-group">
+          <span class="input-group-text">$</span>
+          <input
+            type="text"
+            class="form-control"
+            id="price"
+            aria-label="Amount (to the nearest dollar)"
+            placeholder="0"
+            name="campground[price]"
+          />
+          <span class="input-group-text">.00</span>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          class="form-control"
+          type="text"
+          name="campground[description]"
+          id="description"
+        ></textarea>
+      </div>
+
+      <div class="mb-3">
+        <button class="btn btn-success">Add Campground</button>
+        <a href="/campgrounds" class="btn btn-outline-danger">Cancle</a>
+      </div>
+    </form>
   </div>
-  <div>
-    <label for="location">Location</label>
-    <input type="text" name="campground[location]" id="location" />
-  </div>
-  <button>Add campground</button>
-</form>
-<div>
-  <a href="/campgrounds">Back to all campground</a>
 </div>
