--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -1,29 +1,72 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1>Edit campground</h1>
-<form action="/campgrounds/<%= campground._id %>?_method=PUT " method="post">
-  <div>
-    <label for="title">Title</label>
-    <input
-      type="text"
-      name="campground[title]"
-      id="title"
-      value="<%= campground.title %> "
-    />
+
+<div class="row">
+  <h1 class="h1 text-center">Edit Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[title]"
+          id="title"
+          value="<%= campground.title %> "
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[location]"
+          id="location"
+          value="<%= campground.location %> "
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image URL</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[image]"
+          id="image"
+          value="<%= campground.image %> "
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="price">Price</label>
+        <div class="input-group">
+          <span class="input-group-text">$</span>
+          <input
+            type="text"
+            class="form-control"
+            id="price"
+            aria-label="Amount (to the nearest dollar)"
+            placeholder="0"
+            name="campground[price]"
+            value="<%= campground.price %> "
+          />
+          <span class="input-group-text">.00</span>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          class="form-control"
+          type="text"
+          name="campground[description]"
+          id="description"
+        >
+<%= campground.description %></textarea
+        >
+      </div>
+
+      <div class="mb-3">
+        <button class="btn btn-info">Update Campground</button>
+        <a href="/campgrounds" class="btn btn-outline-danger">Cancle</a>
+      </div>
+    </form>
   </div>
-  <div>
-    <label for="location">Location</label>
-    <input
-      type="text"
-      name="campground[location]"
-      id="location"
-      value="<%= campground.location %> "
-    />
-  </div>
-  <button>Update campground</button>
-</form>
-<div>
-  <a href="/campgrounds/<%= campground._id %> "> Backc to campground</a>
-</div>
-<div>
-  <a href="/campgrounds">Back to all campground</a>
 </div>
