--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,16 +1,35 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1>Show Details</h1>
-<img src="<%= campground.image %> " alt="campground_image" />
-<h2><%= campground.title %></h2>
-<h3><%= campground.location %></h3>
-<h4><%= campground.price %></h4>
-<p><%= campground.description %></p>
-<div>
-  <a href="/campgrounds/<%= campground._id %>/edit ">Edit the details</a>
-</div>
-<form action="/campgrounds/<%= campground.id %>?_method=DELETE " method="post">
-  <button>Delete the campground</button>
-</form>
-<div>
-  <a href="/campgrounds">Back to All campground</a>
+
+<div class="row">
+  <div class="col-6 offset-3">
+    <div class="card mb-3 shadow p-3 bd-body rounded">
+      <img
+        src="<%= campground.image %> "
+        alt="campground_image"
+        class="card-img-top rounded"
+      />
+      <div class="card-body">
+        <h5 class="card-title"><%= campground.title %></h5>
+        <p class="card-text"><%= campground.description %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Location: <%= campground.location %></li>
+        <li class="list-group-item">Price: $<%= campground.price %>/night</li>
+      </ul>
+      <div class="card-body">
+        <a
+          href="/campgrounds/<%= campground._id %>/edit"
+          class="card-link btn btn-warning"
+          >Edit</a
+        >
+        <form
+          class="d-inline"
+          action="/campgrounds/<%= campground.id %>?_method=DELETE "
+          method="post"
+        >
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
