feat #12: basic form validation

--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -3,7 +3,12 @@
 <div class="row">
   <h1 class="h1 text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+    <form
+      action="/campgrounds/<%= campground._id %>?_method=PUT"
+      method="POST"
+      novalidate
+      class="validated-form"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -12,7 +17,9 @@
           name="campground[title]"
           id="title"
           value="<%= campground.title %> "
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -22,7 +29,9 @@
           name="campground[location]"
           id="location"
           value="<%= campground.location %> "
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image URL</label>
@@ -32,7 +41,9 @@
           name="campground[image]"
           id="image"
           value="<%= campground.image %> "
+          required
         />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
@@ -46,9 +57,11 @@
             placeholder="0"
             name="campground[price]"
             value="<%= campground.price %> "
+            required
           />
           <span class="input-group-text">.00</span>
         </div>
+        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <div class="mb-3">
@@ -58,9 +71,11 @@
           type="text"
           name="campground[description]"
           id="description"
+          required
         >
 <%= campground.description %></textarea
         >
+        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <div class="mb-3">
