--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -30,6 +30,31 @@
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
+      <div class="card-footer text-muted">2 days ago</div>
     </div>
+    <!-- Review section -->
+    <h2 class="h2">Leave a review</h2>
+    <form
+      action="/campgrounds/<%= campground._id %>/reviews"
+      method="POST"
+      class="mb-3"
+    >
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating</label>
+        <input
+          class="form-range"
+          type="range"
+          min="1"
+          max="5"
+          name="review[rating]"
+          id="rating"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="body">Review</label>
+        <textarea class="form-control" name="review[body]" id="body"></textarea>
+      </div>
+      <button class="btn btn-success">Submit</button>
+    </form>
   </div>
 </div>
