--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate.ejs') %>
 
 <div class="row">
-  <div class="col-6 offset-3">
+  <div class="col-6">
     <div class="card mb-3 shadow p-3 bd-body rounded">
       <img
         src="<%= campground.image %> "
@@ -32,6 +32,10 @@
       </div>
       <div class="card-footer text-muted">2 days ago</div>
     </div>
+  </div>
+
+  <!-- Review Section -->
+  <div class="col-6">
     <!-- Review section -->
     <h2 class="h2">Leave a review</h2>
     <form
@@ -63,5 +67,16 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
+    <!-- Review text section -->
+    <% for(let review of campground.reviews) { %>
+    <div class="mb-3">
+      <div class="card">
+        <div class="card-body">
+          <div class="card-title mb-2">Rating: <%= review.rating %></div>
+          <p class="card-text"><%= review.body %></p>
+        </div>
+      </div>
+    </div>
+    <% } %>
   </div>
 </div>
