--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -75,6 +75,14 @@
           <div class="card-title mb-2">Rating: <%= review.rating %></div>
           <p class="card-text"><%= review.body %></p>
         </div>
+
+        <form
+          class="p-3"
+          action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE "
+          method="POST"
+        >
+          <button class="btn btn-sm btn-danger">Delete</button>
+        </form>
       </div>
     </div>
     <% } %>
