--- a/YelpCamp/views/layouts/boilerplate.ejs
+++ b/YelpCamp/views/layouts/boilerplate.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boilerplate!!</title>
+    <title>Yelp Camp</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,9 @@
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
-    <main class="container mt-5"><%- body %></main>
+    <main class="container mt-5">
+      <%- include('../partials/flash') %> <%- body %>
+    </main>
     <%- include('../partials/footer') %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
