--- a/YelpCamp/views/partials/navbar.ejs
+++ b/YelpCamp/views/partials/navbar.ejs
@@ -14,7 +14,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
@@ -25,6 +25,15 @@
           <a class="nav-link" href="/campgrounds/new">New Campground</a>
         </li>
       </ul>
+
+      <div class="navbar-nav">
+        <% if(!currentUser) { %>
+        <a class="nav-item nav-link" href="/login">Login</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
+        <% } else{ %>
+        <a class="nav-item nav-link" href="/logout">Logout</a>
+        <% } %>
+      </div>
     </div>
   </div>
 </nav>
