--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -14,6 +14,9 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Location: <%= campground.location %></li>
+        <li class="list-group-item">
+          Submitted By: <%= campground.author.username %>
+        </li>
         <li class="list-group-item">Price: $<%= campground.price %>/night</li>
       </ul>
       <div class="card-body">
