feat #12: only owner can delete the campgrounds

--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -19,6 +19,9 @@
         </li>
         <li class="list-group-item">Price: $<%= campground.price %>/night</li>
       </ul>
+      <!-- edit and delete button for campground -->
+      <!-- show thise button only for the owner of campground -->
+      <% if(currentUser && campground.author.equals(currentUser._id)) { %>
       <div class="card-body">
         <a
           href="/campgrounds/<%= campground._id %>/edit"
@@ -33,6 +36,7 @@
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
+      <% } %>
       <div class="card-footer text-muted">2 days ago</div>
     </div>
   </div>
