--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -82,7 +82,8 @@
           <div class="card-title mb-2">Rating: <%= review.rating %></div>
           <p class="card-text"><%= review.body %></p>
         </div>
-
+        <!-- show the delete button for review owner -->
+        <% if(currentUser && review.author.equals(currentUser._id)) { %>
         <form
           class="p-3"
           action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE "
@@ -90,6 +91,7 @@
         >
           <button class="btn btn-sm btn-danger">Delete</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
