--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -82,6 +82,7 @@
       <div class="card">
         <div class="card-body">
           <div class="card-title mb-2">Rating: <%= review.rating %></div>
+          <div class="card-subtitle mb-2">By <%= review.author.username %></div>
           <p class="card-text"><%= review.body %></p>
         </div>
         <!-- show the delete button for review owner -->
