--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -32,16 +32,18 @@
         />
         <div class="valid-feedback">Looks good!</div>
       </div>
+      <!-- image form -->
       <div class="mb-3">
-        <label class="form-label" for="image">Image URL</label>
-        <input
-          class="form-control"
-          type="text"
-          name="campground[image]"
-          id="image"
-          required
-        />
-        <div class="valid-feedback">Looks good!</div>
+        <div class="form-file custom-file">
+          <input
+            class="form-control"
+            type="file"
+            name="image"
+            id="image"
+            multiple
+          />
+          <label class="form-label custom-file-label" for="image"> </label>
+        </div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
