--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-md-4">
       <img
-        src="<%= campground.image %> "
+        src="<%= campground.images[0].url %> "
         class="rounded img-fluid"
         alt="campground_image"
       />
