--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,9 +1,5 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1 class="h1">All Campground</h1>
-
-<div>
-  <a href="/campgrounds/new" class="btn btn-primary">Add new Campground</a>
-</div>
+<h1 class="h1 mb-4">All Campground</h1>
 
 <% for(let campground of campgrounds) { %>
 
