--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,31 +1,46 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1 class="h1 mb-4">All Campground</h1>
 
-<% for(let campground of campgrounds) { %>
+<!-- cluster map box -->
+<header>
+  <div id="map" style="width: 100%; height: 500px"></div>
+</header>
 
-<!-- card -->
-<div class="card mb-3 shadow p-3 bd-body rounded">
-  <div class="row">
-    <div class="col-md-4">
-      <img
-        src="<%= campground.images[0].url %> "
-        class="rounded img-fluid"
-        alt="campground_image"
-      />
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%= campground.description %></p>
-        <p class="card-text">
-          <small class="text-muted"><%= campground.location %> </small>
-        </p>
-        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
-          >Read More</a
-        >
+<main class="container m-1">
+  <h1 class="h1 mb-4">All Campground</h1>
+
+  <% for(let campground of campgrounds) { %>
+
+  <!-- card -->
+  <div class="card mb-3 shadow p-3 bd-body rounded">
+    <div class="row">
+      <div class="col-md-4">
+        <img
+          src="<%= campground.images[0].url %> "
+          class="rounded img-fluid"
+          alt="campground_image"
+        />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"><%= campground.title %></h5>
+          <p class="card-text"><%= campground.description %></p>
+          <p class="card-text">
+            <small class="text-muted"><%= campground.location %> </small>
+          </p>
+          <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
+            >Read More</a
+          >
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<% } %>
+  <% } %>
+</main>
+
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+</script>
+
+<script src="/js/clusterMap.js"></script>
