--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 
 <!-- cluster map box -->
 <header>
-  <div id="map" style="width: 100%; height: 500px"></div>
+  <div id="cluster-map"></div>
 </header>
 
 <main class="container m-1">
@@ -14,11 +14,19 @@
   <div class="card mb-3 shadow p-3 bd-body rounded">
     <div class="row">
       <div class="col-md-4">
+        <% if(campground.images.length) { %>
         <img
           src="<%= campground.images[0].url %> "
           class="rounded img-fluid"
           alt="campground_image"
         />
+        <% } else { %>
+        <img
+          class="rounded img-fluid"
+          alt=""
+          src="https://res.cloudinary.com/douqbebwk/image/upload/v1600103881/YelpCamp/lz8jjv2gyynjil7lswf4.png"
+        />
+        <% } %>
       </div>
       <div class="col-md-8">
         <div class="card-body">
