reflector #12: clean up the code

--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -5,7 +5,7 @@
   <div class="col-6 offset-3">
     <form
       action="/campgrounds"
-      method="post"
+      method="POST"
       novalidate
       class="validated-form"
       enctype="multipart/form-data"
@@ -34,6 +34,7 @@
       </div>
       <!-- image form -->
       <div class="mb-3">
+        <label class="form-label" for="image">Images</label>
         <div class="form-file custom-file">
           <input
             class="form-control"
